--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/user-event": "^12.2.2",
     "gh-pages": "^3.1.0",
-    "homepage": "https:/RuocenLiao.github.io/portfolio",
+    "homepage": "https://ruocenliao.github.io/portfolio",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-download-link": "^2.3.0",
+    "react-intersection-observer": "^8.31.0",
+    "react-pro-sidebar": "^0.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"    
+    "react-sticky-box": "^0.9.3",
+    "typescript": "^4.1.2",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d bulid",
     "start": "react-scripts start",
     "build": "react-scripts build && mv build docs",
     "test": "react-scripts test",
