--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "gh-pages": "^3.1.0",
-    "homepage": "https://ruocenliao.github.io/portfolio",
+    "homepage": ".",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-download-link": "^2.3.0",
@@ -26,7 +26,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -r build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
